--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,16 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Binaries
+
+cub3d
+!cub3d/
+
+# Build files
+
+build/
+
+# Workspace settings
+
+.vscode/
